syntax = "proto3";

option go_package = "./examples";

package examples;

// The request message containing the user's name.
message Request {
  string name = 1;
}

// The response message containing the greetings
message Response {
  string message = 1;
}

// The greeting service definition.
service Greeter {
  rpc SayHello (Request) returns (Response) {}

  rpc SayHelloStreamReply (Request) returns (stream Response) {}

  rpc SayHelloStreamRequest(stream Request) returns (Response) {}

  rpc SayHelloDuplex(stream Request) returns (stream Response) {}
}
